--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.1.14",
     "@smastrom/react-rating": "^1.3.2",
+    "@tanstack/react-query": "^5.8.1",
+    "axios": "^1.6.0",
     "firebase": "^10.5.2",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-pdf": "^7.5.1",
     "react-router-dom": "^6.18.0",
     "sweetalert": "^2.1.2",
     "swiper": "^11.0.3"
