--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-pdf/renderer": "^3.1.14",
     "@smastrom/react-rating": "^1.3.2",
     "@tanstack/react-query": "^5.8.1",
+    "aos": "^2.3.4",
     "axios": "^1.6.0",
     "firebase": "^10.5.2",
     "jspdf": "^2.5.1",
